--- a/w01/cis194-w01.cabal
+++ b/w01/cis194-w01.cabal
@@ -15,15 +15,10 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lecture
-                     , Homework1
+  exposed-modules:     Homework1
                      , Homework2
-                     , Homework3
-                     , Spring13Homework1
-                     , Spring13Homework2
                      , HanoiDisplay
   build-depends:       base >= 4.7 && < 5
-                     , codeworld-api == 0.2.0.0
   default-language:    Haskell2010
 
 executable w01-exe
