--- a/w02/cis194-w02.cabal
+++ b/w02/cis194-w02.cabal
@@ -15,12 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lecture
-                     , Homework1
-                     , Homework2
-                     , Homework3
+  exposed-modules:     Homework1
   build-depends:       base >= 4.7 && < 5
-                     , codeworld-api == 0.2.0.0
   default-language:    Haskell2010
 
 executable w02-exe
