--- a/w02/cis194-w02.cabal
+++ b/w02/cis194-w02.cabal
@@ -15,7 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Homework1
+  exposed-modules:     LogAnalysis
+                     , Log
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -32,6 +33,7 @@ test-suite w02-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , hspec == 2.4.1
                      , cis194-w02
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
