--- a/04-higher-order/cis194-w04.cabal
+++ b/04-higher-order/cis194-w04.cabal
@@ -17,6 +17,8 @@ library
   exposed-modules:     Lecture
                      , Homework1
                      , Homework2
+                     , Homework3
+                     , Homework4
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
