--- a/01-intro/cis194-w01.cabal
+++ b/01-intro/cis194-w01.cabal
@@ -15,8 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Homework1
-                     , Homework2
+  exposed-modules:     Exercise1
+                     , Exercise2
                      , HanoiDisplay
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
