--- a/04-higher-order/cis194-w04.cabal
+++ b/04-higher-order/cis194-w04.cabal
@@ -15,10 +15,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lecture
-                     , Homework1
-                     , Homework2
-                     , Homework3
-                     , Homework4
+                     , Exercise1
+                     , Exercise2
+                     , Exercise3
+                     , Exercise4
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
