--- a/05-type-classes/cis194-w05.cabal
+++ b/05-type-classes/cis194-w05.cabal
@@ -19,10 +19,12 @@ library
                      , Exercise3
                      , Exercise4
                      , Exercise5
+                     , Exercise6
                      , ExprT
                      , Parser
                      , StackVM
   build-depends:       base >= 4.7 && < 5
+                     , containers == 0.5.7.1
   default-language:    Haskell2010
 
 executable cis194-w05-exe
