--- a/05-type-classes/stack.yaml
+++ b/05-type-classes/stack.yaml
@@ -39,7 +39,7 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: ["hspec-2.4.2"]
+extra-deps: ["hspec-2.4.2", "containers-0.5.7.1"]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
