--- a/06-laziness/cis194-w06.cabal
+++ b/06-laziness/cis194-w06.cabal
@@ -20,6 +20,7 @@ library
                      , Exercise3
                      , Exercise4
                      , Exercise5
+                     , Exercise6
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
