--- a/04-higher-order/cis194-w04.cabal
+++ b/04-higher-order/cis194-w04.cabal
@@ -2,12 +2,12 @@ name:                cis194-w04
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/cis194-w04#readme
+homepage:            https://github.com/danielholmes/cis194-spring-13
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
+author:              Daniel Holmes
+maintainer:          daniel@danielholmes.org
+copyright:           2017 Daniel Holmes
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
