--- a/07-folds-monoids/cis194-w07.cabal
+++ b/07-folds-monoids/cis194-w07.cabal
@@ -1,4 +1,4 @@
-name:                cis194-w06
+name:                cis194-w07
 version:             0.1.0.0
 -- synopsis:
 -- description:
@@ -14,34 +14,37 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Exercise1
+  exposed-modules:     Buffer
+                     , Editor
+                     , Sized
+                     , StringBuffer
+                     , JoinList
+                     , Exercise1
                      , Exercise2
                      , Exercise3
                      , Exercise4
-                     , Exercise5
-                     , Exercise6
-                     , Exercise7
   build-depends:       base >= 4.7 && < 5
+                     , mtl >= 2.2.1
   default-language:    Haskell2010
 
-executable cis194-w06-exe
+executable main
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , cis194-w06
+                     , cis194-w07
   default-language:    Haskell2010
 
-test-suite cis194-w06-test
+test-suite cis194-w07-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , hspec == 2.4.3
-                     , cis194-w06
+                     , cis194-w07
+                     , hspec >= 2.4.3 && < 3
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/cis194-w06
+  location: https://github.com/githubuser/cis194-w07
