--- a/07-folds-monoids/cis194-w07.cabal
+++ b/07-folds-monoids/cis194-w07.cabal
@@ -23,6 +23,8 @@ library
                      , Exercise2
                      , Exercise3
                      , Exercise4
+                     , RunStringEditor
+                     , RunJoinListEditor
   build-depends:       base >= 4.7 && < 5
                      , mtl >= 2.2.1
   default-language:    Haskell2010
