--- a/08-io/cis194-w08.cabal
+++ b/08-io/cis194-w08.cabal
@@ -19,11 +19,13 @@ library
                      , Exercise1
                      , Exercise2
                      , Exercise3
+                     , Exercise4
+                     , Exercise5
   build-depends:       base >= 4.7 && < 5
                      , containers == 0.5.10.2
   default-language:    Haskell2010
 
-executable cis194-w08-exe
+executable main
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
